# items_shop

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
items_shop_web/: Dockerfile
items_shop_web/core/: settings.py  urls.py  wsgi.py
items_shop_web/item/: admin.py  models.py  urls.py  views.py
items_shop_web/item/migrations/: 0001_initial.py
items_shop_web/item/templates/item/: item_detail.html
items_shop_web/order/: admin.py  models.py  urls.py  views.py
items_shop_web/order/migrations/: 0001_initial.py
items_shop_web/order/templates/order/: order_detail.html
